- FIX: subset_data() - fix for failure with inspect() objects
- FIX: format_time() - fix for not appending new numeric time column onto a data.table
- FIX: format_time() - fix for data.frames columns being renamed on return (by using data.frame instead of cbind)
- FIX: auto_rate() - Fix for plots failing where result contains an NA (fix in multi.p() involving clip)



Changes
- CHANGE: format_time - numeric time column name changed from `elapsed` to `time.num` (elapsed is not a good term for non-english speakers)
- CHANGE: Documentation - terminology clarifed. Rates now referred to as absolute (for whole animal or chamber) or mass specific.
  - (ugh, might have to revist the above - we use absolute in subset_rate for absolute value between +/-... )
- CHANGE: Updated startup message for full MEE citation
- CHANGE: import_file docs - updated supported systems list
- CHANGE: Updated README
- CHANGE: Better original par() restoration behaviour (TIL: put them next to each other at start and use on.exit() to restore and it stills works if there is some sort of plotting error that causes it to exit early)



========================== inspect() ============================
Changes

- `time = 1` and `oxygen = 2` the defaults rather than NULL
- if `oxygen = NULL` now inspects ALL columns
- added `width` input for rolling reg plot (default 0.1)
- updated roxygen docs. There was quite a lot out of date...
- Added message if multiple columns inspected that subsequent functions will only use first 2 by default
- Muliple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- FIX: Rolling rate plot failed with even a single NA in time or oxygen data.

print.inspect
- minor edits to console print out (e.g. messages print relevant columns names rather than both x/y col names, better spacing)
- if uneven time, now prints min/max intervals found
- time error locations now printed out when multiple o2 columns inspected

