@@ -46,10 +46,10 @@ adjust_rate <- function(x, by) {
   } else rate <- x
 
   # Perform correction
-  corrected <- unname(unlist(rate - by))
+  adjusted.rate <- unname(unlist(rate - by))
 
   # Append the results to the object
-  out <- c(input = x, list(adjustment = by, corrected = corrected))
+  out <- c(input = x, list(adjustment = by, adjusted.rate = adjusted.rate))
   class(out) <- "adjust_rate"
   message("\nRate adjustments applied. Use print() command for more info.")
   return(out)
@@ -62,13 +62,13 @@ adjust_rate <- function(x, by) {
 print.adjust_rate <- function(object, pos = 1, ...) {
   cat("\n# adjust_rate # -------------------------\n")
   cat("Note: please consider the sign of the correction value when adjusting the rate.\n")
-  if(pos > length(object$corrected)) stop("Invalid 'pos' rank: only ", length(object$corrected), " adjusted rates found.")
+  if(pos > length(object$adjusted.rate)) stop("Invalid 'pos' rank: only ", length(object$adjusted.rate), " adjusted rates found.")
   cat("\nRank/position", pos, "result shown. To see all results use summary().")
   if (length(object) == 3) {
     cat("\nInput rate:", object$input[pos])
   } else cat("\nInput rate:", object$input.rate[pos])
   cat("\nAdjustment:", object$adjustment)
-  cat("\nAdj. rate:", object$corrected[pos], "\n")
+  cat("\nAdj. rate:", object$adjusted.rate[pos], "\n")
   return(invisible(object))
 }
 
@@ -78,7 +78,7 @@ summary.adjust_rate <- function(object, ...) {
   if (length(object) == 3) {
     rate <- object$input
   } else rate <- object$input.rate
-  out <- data.table(rate, adjustment = object$adjustment, "adjusted rate" = object$corrected)
+  out <- data.table(rate, adjustment = object$adjustment, "adjusted rate" = object$adjusted.rate)
   print(out)
   return(invisible(object))
 }
