@@ -35,6 +35,8 @@ Changes
 - CHANGE: import_file docs - updated supported systems list
 - CHANGE: Updated README
 - CHANGE: Better original par() restoration behaviour (TIL: put them next to each other at start and use on.exit() to restore and it stills works if there is some sort of plotting error that causes it to exit early)
+- CHANGE: inspect_data and pcrit now have 'function deprecated' warnings in docs and code
+- CHANGE: adjust_rate - changed rates from 'corrected' to 'adjusted.rate' in output (updated code in convert_rate, convert_DO to match)
 
 
 
@@ -55,3 +57,11 @@ print.inspect
 - time error locations now printed out when multiple o2 columns inspected
 
 
+
+========================== S3 Methods ============================
+print.adjust_rate
+- stops if 'pos' too high
+- FIX: prints adjustment correctly if pos > 1
+
+summary.adjust_rate
+- FIX: 'adjustment' column was missing
